--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "corp": "^1.0.4",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
