--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
+    "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "corp": "^1.0.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.7"
   },
@@ -25,6 +28,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
