--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "corp": "^1.0.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "helmet": "^8.1.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/node": "^22.14.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.1.2",
+    "@types/react-dom": "^18.1.2",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
